[package]
name = "deep_space"
version = "2.10.0"
authors = ["Justin Kilpatrick <justin@althea.net>", "Michał Papierski <michal@papierski.net>"]
repository = "https://github.com/althea-net/deep_space"
description = "A highly portable, batteries included, transaction generation and key management library for CosmosSDK blockchains"
license = "Apache-2.0"
edition = "2021"

[dependencies]
num256 = "0.3"
sha2 = "0.10"
num-bigint = "0.4"
num-traits = "0.2"
ripemd = "0.1"
bech32 = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
base64 = "0.13"
unicode-normalization = {version = "0.1"}
prost-types = "0.10"
prost = "0.10"
pbkdf2 = {version = "0.11"}
hmac = {version = "0.12"}
rand = {version = "0.8"}
rust_decimal = "1.9"
secp256k1 = "0.22"
tonic = {version = "0.7", features = ["compression"]}
bytes = "1.0"
cosmos-sdk-proto = {package = "cosmos-sdk-proto-althea", version = "0.11"}
log = "0.4"
tokio = {version = "1", features=["time"]}

[dev-dependencies]
rand = "0.8"
env_logger = "0.9"
actix-rt = "2.2"


[features]
